--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,77 @@
 <resources>
     <string name="app_name">BasisDependency</string>
+    <string name="long_string">BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+            BasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_logBasisDependency_log
+    </string>
 </resources>
